--- a/Q5/docker_q5/Dockerfile
+++ b/Q5/docker_q5/Dockerfile
@@ -1,13 +1,11 @@
-FROM ubuntu:20.04
+FROM alpine:3.19
 
-RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y bash coreutils awk nano
+RUN apk add --no-cache bash coreutils awk nano
 
 COPY animal_menu.sh /app/animal_menu.sh
 COPY animals.csv /app/animals.csv
 
 WORKDIR /app
-
 RUN chmod +x animal_menu.sh
 
 CMD ["bash"]
