Q5: docker integration finalized

--- a/Q5/docker_q5/Dockerfile
+++ b/Q5/docker_q5/Dockerfile
@@ -1,12 +1,20 @@
-FROM alpine:3.19
+FROM ubuntu:22.04
 
-RUN apk add --no-cache bash coreutils awk nano
+# עדכון ותקנת כלים
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    bash \
+    coreutils \
+    gawk \
+    nano
 
+# העתקת הסקריפט והקובץ לתוך הקונטיינר
 COPY animal_menu.sh /app/animal_menu.sh
 COPY animals.csv /app/animals.csv
 
 WORKDIR /app
 RUN chmod +x animal_menu.sh
 
+# הפעלת שורת הפקודה הבסיסית
 CMD ["bash"]
 
